added preferences to the user edit page

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,9 @@
-<%= form_for @user do |f| %>
-<%= f.label 'Grape' %><br>
-<datalist id = "preferences">
-<% @user.preferences.keys.each do |key|%>
-  <option value="<%=key%>">
-    <h1>Hi</h1>
-<%end%>
-</datalist>
+<%= form_for @user do |f|%>
+  <%@grapes.each do |grape| %>
+    <%= f.check_box :preferences, { multiple: true }, grape, false%>
+    <%= f.label grape%>
+  <%end%>
 <%= f.submit "Submit" %>
 <% end %>
+
+
