Added user pages: new, show, edit

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,8 +2,19 @@
   <%@grapes.each do |grape| %>
     <%= f.check_box :preferences, { multiple: true }, grape, false%>
     <%= f.label grape%>
-  <%end%>
+  <%end%><br>
 <%= f.submit "Submit" %>
 <% end %>
+<%= form_for @user do |f|%>
+  <%= f.label :min_rating%>
+  <%= f.select :preferences, options_for_select(["1", "2", "3", "4", "5"])%>
+  <%= f.submit "Submit" %>
+<br>
+<%end%>
 
-
+<%= form_for @user do |f|%>
+  <%= f.label :price%>
+  <%= f.number_field :preferences%>
+  <%= f.submit "Submit" %>
+<br>
+<%end%>
