--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,17 @@
 <%= @user.name %>
 
+<ul>
+<%@user.preferences[:grape].each do |grape|%>
+    <li>
+    <%=grape%>
+    </li>
+<%end%>
+<li>
+<%=@user.preferences[:min_rating]%>
+</li>
+<li>
+<%=@user.preferences[:price]%>
+</li>
+
+</ul>
 <%= link_to "Edit Prefences", edit_user_path(@user) %>
