--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<%= image_tag 'The-Wine-Room-Logo.png', :class => 'app-logo' %>
+
 <% @users.each do |u| %>
 <%= link_to u.name, user_path(u) %>
 <% end %>
