--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,52 +9,81 @@
 // login page CSS
 *{
     font-family: sans-serif;
-    text-align: center;
 }
 *:focus{
     outline:none
 }
 
-.form{
+.app-logo{
+    position: absolute;
+    top: 1em;
+    left: 1em;
+    width: 10em;
     background-color: #fff;
-    width: 25%;
-    padding: 5em;
-    margin: auto;
-    margin-top: 10%;
-    border: 1px solid #ccc;
-    border-radius: 1em;
-    border-left: 0.2em solid red;
 }
 
-input{
-    font-size: 2em;
-    background-color: #E7E7E7;
-    font-size: 1em;
-    padding: 12px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 1em;
-    box-sizing: border-box;
- 
-  }
+.form{
 
- .width-alter{
-     width: 100%;
- }
-  
-  input[type=submit] {
-    text-align: center;
+    background-color: transparent;
+    width: 30%;
+    padding: 2em;
+    margin: auto;
+    margin-top: 10%;
+    border-radius: 1em;
+    border: 0.2em solid #533EE9;
+}
+
+.regular-input {
+	background-color: #fafafa;
+	border: 1px solid #cacece;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+	padding: 9px;
+	border-radius: .5em;
+	display: inline-block;
+    position: relative;
     width: 100%;
-    background-color: red;
+    font-weight: lighter;
+}
+
+.regular-checkbox{
+    background-color: blue;
+}
+
+
+
+.checkbox-group{
+    padding:0 1em;
+    margin: .1em;
+    border-radius: .3em;
+    border: 0.2em solid #533EE9;
+    display: inline-block;
+}
+
+
+  input[type=submit] {
+    width: 100%;
+    background-color: #F73759;
     color: white;
-    font-size: 1em;
-    padding: 14px 20px;
-    margin: 8px 0;
+    padding: 10px 20px;
+    margin: 6px 0;
     border: none;
     border-radius: 1em;
     cursor: pointer;
+    font-weight: bold;
   }
 
-
+.create-account-link{
+    text-decoration: none;
+    color: #533EE9;
+    text-align: center;
+    font-size: 0.9em;
+}
 
 // login page CSS ends
+
+
+// index page styling
+
+
+
+// end of indes page styling
