--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,28 +10,7 @@
 *{
     font-family: sans-serif;
 }
-*:focus{
-    outline:none
-}
 
-.app-logo{
-    position: absolute;
-    top: 1em;
-    left: 1em;
-    width: 10em;
-    background-color: #fff;
-}
-
-.form{
-
-    background-color: transparent;
-    width: 30%;
-    padding: 2em;
-    margin: auto;
-    margin-top: 10%;
-    border-radius: 1em;
-    border: 0.2em solid #533EE9;
-}
 
 .regular-input {
 	background-color: #fafafa;
@@ -49,8 +28,6 @@
     background-color: blue;
 }
 
-
-
 .checkbox-group{
     padding:0 1em;
     margin: .1em;
@@ -60,17 +37,7 @@
 }
 
 
-  input[type=submit] {
-    width: 100%;
-    background-color: #F73759;
-    color: white;
-    padding: 10px 20px;
-    margin: 6px 0;
-    border: none;
-    border-radius: 1em;
-    cursor: pointer;
-    font-weight: bold;
-  }
+  
 
 .create-account-link{
     text-decoration: none;
@@ -82,8 +49,23 @@
 // login page CSS ends
 
 
-// index page styling
+// show page styling
+.preferences-list{
+    list-style-type: none;
+    text-align: left;
+    position: relative;
+    margin-top: 10em;
+}
+.preferences-list li{
+    background-color: #F73759;
+    display: inline;
+    padding: 1.7em 3em;
+    color: white;
+    margin-right: 1em;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}.preferences-list li:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
 
-
-
-// end of indes page styling
+// end of show page styling
