--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,3 +8,8 @@
 <%end%>
 </ul>
 <%= link_to "Edit Prefences", edit_user_path(@user) %>
+
+<%@user.purchased.each do |w|%>
+<li><%=w.name%></li>
+<%=button_to "Review Wine", "/reviews/#{w.id}/new"%>
+<%end%>
