--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,6 +23,10 @@
     background: transparent;
 }
 
+*{
+    font-family: 'Roboto', sans-serif;
+}
+
 *:focus{
     outline:none
 }
@@ -48,22 +52,36 @@ input[type=submit] {
     border-radius: 1em;
     cursor: pointer;
     font-weight: bold;
+    max-width: 15em;
   }
 
 .wines-link{
-    position: fixed;
+    position: absolute;
     top: 1.5em;
-    right: 1.5em;
     font-weight: 100;
     font-size: 1em;
-    padding: 1.7em 4em;
+    padding: 1.7em 1.5em;
     background-color: #533EE9;
+    border-radius: 1em;
     color: white;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }.wines-link:hover{
     color: white;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+#wines-page-link{
+    right: 8em;
+}
+
+#cart-link{
+    right: 14.5em;
+}
+
+#logout{
+    right: 1.5em;
+    background-color: #F73759;
 }
 
 
