--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the carts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.cart-container{
+    width: 50%;
+    margin: 10em auto;
+    padding: 2em 5em 5em 5em;
+    border-radius: 1em;
+}
+
+.cart-heading{
+    font-size: 6em;
+}
+
+.cartwine-container{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    border-radius: 1em;
+    padding: 2em;
+    text-align: left;
+}
