--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -64,8 +64,20 @@
     margin-right: 1em;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}.preferences-list li:hover{
+}
+
+.preferences-list li:hover{
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.preferences-container{
+    margin-top: 7em;
+    
+}
+
+.update-preferences{
+    font-size: 2em;
+    margin: 2em;
 }
 
 // end of show page styling
