--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,7 @@
+<%= link_to "Shopping Cart", "/carts/#{User.find(session[:user_id]).carts[0].id}", :class => "wines-link", :id=>'cart-link'%>
+<%= link_to "Logout", "/logout", :class => "wines-link" , :id => 'logout'%>
+<%= link_to "WINES",wines_path, :class => "wines-link", :id => "wines-page-link"%>
+
 <h1>Create a new review</h1>
 
 <%=form_for @review do |f|%>
