--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,15 @@
-<%= form_for @user do |f|%>
-  <%= f.label :name%><br>
-  <%= f.text_field :name, :class => "width-alter"%><br>
+<%= link_to "Shopping Cart", "/carts/#{User.find(session[:user_id]).carts[0].id}", :class => "wines-link", :id=>'cart-link'%>
+<%= link_to "Logout", "/logout", :class => "wines-link" , :id => 'logout'%>
+<%= link_to "Wines",wines_path, :class => "wines-link", :id => "wines-page-link"%>
+
+<div class="preferences-container">
+<%= form_for @user do |f|%> 
+  <%= f.label "Update Preferences", :class=>"update-preferences"%><br> <br>
   <%@grapes.each do |grape| %>
     <%= f.check_box :preferences, { multiple: true }, grape, false%>
     <%= f.label grape%><br>
   <%end%><br>
 <%= f.submit "Submit" %>
 <%end%>
+
+</div>
