--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<%= link_to "Shopping Cart", "/carts/#{User.find(session[:user_id]).carts[0].id}", :class => "wines-link", :id=>'cart-link'%>
+<%= link_to "Logout", "/logout", :class => "wines-link" , :id => 'logout'%>
+<%= link_to "WINES",wines_path, :class => "wines-link", :id => "wines-page-link"%>
 
 <%= @user.name%>
 <ul class="preferences-list">
@@ -10,6 +13,15 @@
 <%= link_to "Edit Prefences", edit_user_path(@user) %>
 
 <%@user.purchased.each do |w|%>
-<li><%=w.name%></li>
+<li><%=link_to w.name, wine_path(w)%></li>
 <%=button_to "Review Wine", "/reviews/#{w.id}/new"%>
 <%end%>
+<h1>My Reviews</h1>
+<%@user.reviews.each do |review|%>
+Wine: <%=link_to review.wine.name, wine_path(review.wine)%><br>
+Your Rating: <%=review.rating%><br>
+Your Review: <%=review.content%><br>
+<br>
+<%end%>
+
+
