--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <%= link_to "Shopping Cart", "/carts/#{User.find(session[:user_id]).carts[0].id}", :class => "wines-link", :id=>'cart-link'%>
 <%= link_to "Logout", "/logout", :class => "wines-link" , :id => 'logout'%>
-<%= link_to "WINES",wines_path, :class => "wines-link", :id => "wines-page-link"%>
+<%= link_to "Wines",wines_path, :class => "wines-link", :id => "wines-page-link"%>
 
 <%= @user.name%>
 <ul class="preferences-list">
