--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -50,6 +50,7 @@
 
 
 // show page styling
+
 .preferences-list{
     list-style-type: none;
     text-align: left;
@@ -65,6 +66,9 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
+.preferences-list li a{
+    color: white;
+}
 
 .preferences-list li:hover{
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -78,6 +82,10 @@
 .update-preferences{
     font-size: 2em;
     margin: 2em;
+}
+
+#edit-user-link{
+    right: 25em;
 }
 
 // end of show page styling
