--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,6 +4,8 @@
 
 <div class="preferences-container">
 <%= form_for @user do |f|%> 
+  <%= f.label :name%>
+  <%= f.text_field :name%>
   <%= f.label "Update Preferences", :class=>"update-preferences"%><br> <br>
   <%@grapes.each do |grape| %>
     <%= f.check_box :preferences, { multiple: true }, grape, false%>
